tests/models/enum/unnamed/u8/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(alias = "val")]
        u8
    ),
}
fn main() {}
